<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyberrangefun_app"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_app_demonstrates_how_malware_can_start_automatically_after_device_boot_and_start_a_malicious_service"
        android:textAlignment="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_see_something_cool_press_the_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_this_out"
        android:layout_marginTop="32dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/disclaimerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_educational_purposes_only"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:layout_marginBottom="16dp" />

</LinearLayout>